--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,6 @@
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
-<p><em>Thank you for using urban-waddle.</em></p>
+<p><em>Thank you for using <a href="https://github.com/francasix/urban-waddle">urban-waddle</a>.</em></p>
 </body>
 </html>
